k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kbj-intranet-service
  namespace: kbj-intranet
  labels:
    app.kubernetes.io/name: kbj-intranet-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: kbj-intranet-portal
